tests/rosetta/out/Smalltalk/apply-a-callback-to-an-array-1.out
/tmp/apply-a-callback-to-an-array-1.st:4: parse error, expected ']'
