tests/rosetta/out/Smalltalk/apply-a-callback-to-an-array-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| i |
{1. 2. 3. 4. 5} do: [:i |.
Transcript show: (((i * i) asString)) printString; cr.
].
.
